--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
+.btn{
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 5px;
 
+
+}
+.btn:hover{
+    background-color: yellow;
+    color: black;
+}
 /* Your CSS Code here. */
